src/unit_tests/CustCodeGeneration/fail/wtf.cl
class Main inherits IO {
    a : Main <- out_string("hellooooo");
    main() : B { new B };
};

class B { b : B <- new B; };